# jarvis_CC

./: .env.example  .gitignore  CLAUDE.md  JARVIS-CC_참조소스코드.md  README.md  jarvis_agent.py  pyproject.toml  requirements-dev.txt  requirements.txt
archive/: README.md
archive/v3_jarvis_cc/: CLAUDE.md  README.md  __init__.py  claude_bridge.py  korean_filter.py  main.py  monitor.py  overlay.py  session.py  sound_fx.py  startup.py  text_cleaner.py
archive/v3_jarvis_cc/web_ui/: server.py
archive/v4_jarvis_agent/: README.md  start_jarvis_v4.bat
docs/: DEVELOPMENT.md  PROJECT_STRUCTURE.md  VERSIONING.md
docs/archive/: JARVIS-CC_v3_최종계획서.docx
jarvis_cc/: config.py  config.toml  persona.py  state_machine.py  tts_engine.py  voice_input.py  wake_word.py
jarvis_cc/web_ui/static/: settings.html
jarvis_v5/: HANDOVER.md  __init__.py  environment.py  google_tools.py  install.bat  jarvis.py  jarvis_style_research.md  jarvis_upgrade_notes.md  learning_notes.md  memory.py  mobile_extension_plan.md  phase2_pr_checklist.md  requirements.txt  samsung_forum_inquiries.md  self_tools.py  task_planner.py  telegram_bot.py  wake_matcher.py
scripts/: build.bat  install.bat  uninstall.bat
tests/: README.md  conftest.py
tests/unit/: test_wake_matcher.py
